src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Academic_Official__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the contact is Academic Official; otherwise unchecked</description>
        <inlineHelpText>Checked if the contact is Academic Official; otherwise unchecked</inlineHelpText>
        <label>Academic Official</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accounting_Recipient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accounting Recipient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accounting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accounting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alumni__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alumni</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ComOps_Partner_Level_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for identifying partner-level contacts for ComOps</description>
        <inlineHelpText>Used for identifying partner-level contacts for ComOps</inlineHelpText>
        <label>ComOps: Partner-Level Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Notes_Timestamp__c</fullName>
        <inlineHelpText>Automatically captures when the contact notes were last updated</inlineHelpText>
        <label>Contact Notes Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Number_18__c</fullName>
        <description>Unique case insensitive 18 character ID for the contact</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unique case insensitive 18 character ID for the contact</inlineHelpText>
        <label>Contact Number-18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_notes_last_updated__c</fullName>
        <label>zContact notes last updated (Deprecated)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the contact is Course Support; otherwise unchecked</description>
        <inlineHelpText>Checked if the contact is Course Support; otherwise unchecked</inlineHelpText>
        <label>Course Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_level_Instructor_From_EDW__c</fullName>
        <formula>IF(NOT(ISBLANK( Course_level_Instructor_latest_login_tim__c )), TRUE, FALSE)</formula>
        <label>Course level Instructor: From EDW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_level_Instructor_latest_login_tim__c</fullName>
        <label>Course level Instructor latest login tim</label>
        <summarizedField>Course_Contact_Association__c.Course_Membership_Instructor_Timestamp__c</summarizedField>
        <summaryFilterItems>
            <field>Course_Contact_Association__c.Course_Instructor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Course_Contact_Association__c.Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Course_level_TA_From_EDW__c</fullName>
        <formula>IF(NOT(ISBLANK(Course_level_TA_latest_login_time__c)),TRUE,FALSE)</formula>
        <label>Course level TA : from EDW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_level_TA_latest_login_time__c</fullName>
        <label>Course level TA latest login time</label>
        <summarizedField>Course_Contact_Association__c.Course_Membership_TA_Timestamp__c</summarizedField>
        <summaryFilterItems>
            <field>Course_Contact_Association__c.Course_Teaching_Staff__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Course_Contact_Association__c.Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Coursera_Council__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Coursera Council</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Coordinator_From_EDW__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Contact role form EDW</inlineHelpText>
        <label>Data Coordinator: from EDW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Coordinator_Last_Accessed_Date__c</fullName>
        <label>Data Coordinator Last Accessed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Department_B2B__c</fullName>
        <label>Department (B2B)</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to identify partner reps who should NOT receive communication.</description>
        <inlineHelpText>Check this box if this contact should NOT receive mass communication from Coursera.</inlineHelpText>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if contact is an executive sponsor</description>
        <label>Executive Sponsor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extension</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Guest_Lecturer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Guest Lecturer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IPP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Import2_Id__c</fullName>
        <description>Id of the record in original system, where it was imported from by Import2.com</description>
        <externalId>true</externalId>
        <label>Import2 Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Imported_From_EDW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Imported From EDW?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field meant to indicate if a contact is inactive.</description>
        <inlineHelpText>Check this box if the contact is no longer active as a partner representative.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Industry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instructor_From_EDW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Instructor: from EDW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instructor_Last_Accessed_Date__c</fullName>
        <label>Instructor Last Accessed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Instructor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the contact is Instructor; otherwise unchecked</description>
        <inlineHelpText>Checked if the contact is Instructor; otherwise unchecked</inlineHelpText>
        <label>Instructor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Support__c</fullName>
        <label>Internal Support</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Log_of_Prior_Notes__c</fullName>
        <description>Automatically logs any previous notes or comments within the contact</description>
        <inlineHelpText>Automatic documentation of any previous &apos;Notes&apos; you had in this contact. Will be updated whenever you update new notes above.</inlineHelpText>
        <label>Log of Prior Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MC4SF__MC_Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MC Subscriber</label>
        <referenceTo>MC4SF__MC_Subscriber__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if contact has Marketing related role</inlineHelpText>
        <label>Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Misc notes to record for contact</description>
        <inlineHelpText>Misc notes to record for contact</inlineHelpText>
        <label>Notes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_last_updated__c</fullName>
        <formula>NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zNotes last updated (Deprecated)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Number_of_Associated_Courses__c</fullName>
        <inlineHelpText>This is the count of number of courses the contact is associated with.</inlineHelpText>
        <label>Number of Associated Courses</label>
        <summaryForeignKey>Course_Contact_Association__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the contact is PM; otherwise unchecked</description>
        <inlineHelpText>Checked if the contact is PM; otherwise unchecked</inlineHelpText>
        <label>PM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PM_primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PM-primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the contact is POC; otherwise unchecked</description>
        <inlineHelpText>Checked if the contact is POC; otherwise unchecked</inlineHelpText>
        <label>PoC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Admin_From_EDW__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Contact Role from EDW</inlineHelpText>
        <label>Partner Admin: from EDW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Admin_Last_Accessed_Date__c</fullName>
        <label>Partner Admin Last Accessed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Partners_Conference_Closed_ST_Invite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check if this partner should be considered for an invitation to the closed-door Strategy Track session.</inlineHelpText>
        <label>Partners Conference: Closed ST Invite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Platform_User_Id__c</fullName>
        <inlineHelpText>If contact is imported from EDW, then prod.user_id</inlineHelpText>
        <label>Platform User Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PoC_Recipient_for_Finance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PoC Recipient for Finance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PoC_primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PoC-primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>President_Provost_Chancellor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the contact is President/Provost/Chancellor; otherwise unchecked</description>
        <inlineHelpText>Checked if the contact is President/Provost/Chancellor; otherwise unchecked</inlineHelpText>
        <label>President/Chancellor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>President__c</fullName>
        <defaultValue>false</defaultValue>
        <label>President</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provost_Dean__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provost/Dean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type_Contact_Hidden__c</fullName>
        <label>Record Type Contact (Hidden)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Researcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Researcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>SFDC Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UAB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UAB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2016_Conference_Attendee__c</fullName>
        <formula>if( or(X2016_Conference_Registered_Main__c =true, X2016_Conference_Registered_Research__c =true, X2016_Conference_Registered_Strategy__c =true),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>True if the contact is a 2016 registrant for any conference session</inlineHelpText>
        <label>2016 Conference: Attendee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2016_Conference_Do_Not_Invite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the contact should not be invited</description>
        <inlineHelpText>Check if the contact should not be invited</inlineHelpText>
        <label>2016 Conference: Do Not Invite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2016_Conference_Registered_Main__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if registered for 2016 Main track</inlineHelpText>
        <label>2016 Conference: Registered Main</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2016_Conference_Registered_Research__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if registered for 2016 Research track</inlineHelpText>
        <label>2016 Conference: Registered Research</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2016_Conference_Registered_Strategy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if registered for 2016 Strategy track</inlineHelpText>
        <label>2016 Conference: Registered Strategy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2016_Conference_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Original 2015 Conference Registration target</description>
        <inlineHelpText>Checked if original 2015 Conference Registration target; otherwise unchecked</inlineHelpText>
        <label>2016 Conference Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Date__c</fullName>
        <description>Acquisition Date for lead from marketo during conversion</description>
        <inlineHelpText>Marketo Lead Acquisition Date from Conversion</inlineHelpText>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Program_Id__c</fullName>
        <description>Marketo: Acquisition Program Id</description>
        <label>Acquisition Program Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Program__c</fullName>
        <description>Lead Acquisition Program from Marketo populated during conversion</description>
        <inlineHelpText>Marketo Lead Acquisition Program from Conversion</inlineHelpText>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_City__c</fullName>
        <description>Marketo: Inferred City</description>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Company__c</fullName>
        <description>Marketo: Inferred Company</description>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Country__c</fullName>
        <description>Marketo: Inferred Country</description>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Metropolitan_Area__c</fullName>
        <description>Marketo: Inferred Metropolitan Area</description>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Phone_Area_Code__c</fullName>
        <description>Marketo: Inferred Phone Area Code</description>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Postal_Code__c</fullName>
        <description>Marketo: Inferred Postal Code</description>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_State_Region__c</fullName>
        <description>Marketo: Inferred State Region</description>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Lead_Score__c</fullName>
        <description>Marketo Lead Score for Lead During Conversion</description>
        <inlineHelpText>Marketo Lead Score from Conversion</inlineHelpText>
        <label>Score</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Referrer__c</fullName>
        <description>Marketo: Original Referrer</description>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Search_Engine__c</fullName>
        <description>Marketo: Original Search Engine</description>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Search_Phrase__c</fullName>
        <description>Marketo: Original Search Phrase</description>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Source_Info__c</fullName>
        <description>Marketo: Original Source Info</description>
        <label>Original Source Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Source_Type__c</fullName>
        <description>Marketo: Original Source Type</description>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>B2B_Contact</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.DEPARTMENT</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>01236000000Lzs4</value>
        </filters>
        <label>B2B: All Contacts</label>
        <sharedTo>
            <group>All_B2B</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>Partnerships_Contact_2016_Conf_Research</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>X2016_Conference_Registered_Main__c</columns>
        <columns>X2016_Conference_Registered_Research__c</columns>
        <columns>X2016_Conference_Registered_Strategy__c</columns>
        <columns>X2016_Conference_Target__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>X2016_Conference_Registered_Research__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Partnerships</value>
        </filters>
        <label>Partnerships Contact: 2016 Conf.Research</label>
    </listViews>
    <listViews>
        <fullName>Partnerships_Contact_2016_Conf_Strategy</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>X2016_Conference_Registered_Main__c</columns>
        <columns>X2016_Conference_Registered_Research__c</columns>
        <columns>X2016_Conference_Registered_Strategy__c</columns>
        <columns>X2016_Conference_Target__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>X2016_Conference_Registered_Strategy__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Partnerships</value>
        </filters>
        <label>Partnerships Contact: 2016 Conf.Strategy</label>
    </listViews>
    <listViews>
        <fullName>Partnerships_Contact_All_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>X2016_Conference_Registered_Main__c</columns>
        <columns>X2016_Conference_Registered_Research__c</columns>
        <columns>X2016_Conference_Registered_Strategy__c</columns>
        <columns>X2016_Conference_Target__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Partnerships</value>
        </filters>
        <label>Partnerships Contact: All Contacts</label>
    </listViews>
    <listViews>
        <fullName>Partnerships_Contact_Modified_Today</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>X2016_Conference_Registered_Main__c</columns>
        <columns>X2016_Conference_Registered_Research__c</columns>
        <columns>X2016_Conference_Registered_Strategy__c</columns>
        <columns>X2016_Conference_Target__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Partnerships</value>
        </filters>
        <filters>
            <field>CONTACT.LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Partnerships Contact: Modified Today</label>
    </listViews>
    <listViews>
        <fullName>Partnerships_Contacts_2016_Conf_Main</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>X2016_Conference_Registered_Main__c</columns>
        <columns>X2016_Conference_Registered_Research__c</columns>
        <columns>X2016_Conference_Registered_Strategy__c</columns>
        <columns>X2016_Conference_Target__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>X2016_Conference_Registered_Main__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Partnerships</value>
        </filters>
        <label>Partnerships Contact: 2016 Conf.Main</label>
    </listViews>
    <listViews>
        <fullName>ST_Conference_2017</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partners_Conference_Closed_ST_Invite__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>ST Conference 2017</label>
    </listViews>
    <recordTypes>
        <fullName>Industry_Partner</fullName>
        <active>true</active>
        <description>Contact Record Type for Industry Partners</description>
        <label>Industry Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partnerships</fullName>
        <active>true</active>
        <description>Partnerships Contact type</description>
        <label>Partnerships</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>